--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -1,4 +1,14 @@
-.bg-video{
+body{
+    cursor: url(../assets/cursor/yugicursor.png), default;
+}
+button,
+a,
+a:hover
+img:hover,
+button:hover{
+    cursor: url(../assets/cursor/yamiyugicursorGLOW.png), auto;
+}
+.bg-video {
     position:absolute;
     z-index: -2;
     width: 100vw;
@@ -7,83 +17,88 @@
     display: flex;
     justify-content: center;
 }
-.bg-video video {
+.bg-video .video{
     height: 100vh;
 }
-.bg-video::after {
-    content: "";
-    position: absolute;
-    top: 0;
+.bg-video::after{
+    content:  "";
+    position:absolute;
+    top:0;
     left: 0;
     height: 100vh;
     width: 100vw;
-    background: linear-gradient(90deg, rgba(0, 0, 0, 1) 0%,rgba(0, 0, 0,0.8) 50%, rgba(0, 0, 0, 1) 100%);
+    background: linear-gradient(90deg,
+    gold 0%,
+    rgba(0, 0, 0, 0.5) 50%,
+    rgba(0, 0, 0, 1) 100%);
 }
-.container {
+.container{
     position: relative;
     z-index: 3;
+    display: flex;
     height: 100vh;
 }
-.container__left{
+.container__left {
     width: 35%;
     min-width: 300px;
+    display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: space-around;
 }
 .container__right{
     width: 65%;
-    min-width: 300px;
-    flex-direction: column;
-    align-items: center;
-    justify-content: space-around;
 }
 .score_box{
-    background-color: #fff;
-    padding: 30px;
+    background-color: #00b7ff;
+    padding: 10px;
+    position: absolute;
+    top: 20px;
 }
 .frame {
     border: 3px solid #000;
     border-radius: 5px;
 }
-.card_details {
-    background-color: #fff;
+.card_details{
+    background-color: #ff6262;
     padding: 1rem;
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: space-between;
     height: 6rem;
-    width: 100%;
+    position: absolute;
+    bottom: 20px;
 }
-#card-name {
-    font-size: 0.8rem;
+#card-name{
+    font-size: .9rem;
 }
-#card-type {
+#card-type{
     font-size: 1rem;
 }
-.card-box__container {
+.card-box__container{
     height: 100vh;
     display: flex;
     flex-direction: column;
     justify-content: space-between;
-    padding: 0.3rem;
+    padding: .3rem;
 }
-.card-versus__container {
+.card-versus__container{
     display: flex;
-    flex-direction: column ;
+    flex-direction: column;
+    justify-items: center;
+    align-content: center;
     padding-top: 0.1rem;
     height: 300px;
-    margin-top: 2rem;
 }
 .versus-top,
-.versus-bottom {
-    display: flex;
+.versus-bottom{
+    display:flex;
     align-items: center;
     justify-content: center;
 }
 .versus-bottom{
-    margin-top: 1rem;
+    margin: 1rem;
 }
 #next-duel{
     display: none;
@@ -99,6 +114,15 @@
 .card-infield{
     height: 11.2rem;
     width: 8rem;
-    border: 1px solid #000;
+    border: 1px solid #fff;
     border-radius: 8px;
+}
+.card{
+    transition: transform 0.2s;;
+}
+.card:hover{
+    transform: scale(1.2);
+}
+.debug {
+    border: 1px solid red;
 }
